ApexTrailhead/force-app/main/default/objects/ModuleResponse__c/ModuleResponse__c.object-meta.xml
<CustomObject>
    <label>Module Response</label>
    <nameField>
        <label>module Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Moduls Response</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>