ApexTrailhead/force-app/main/default/objects/ModuleResponse__c/fields/ModuleProgress__c.field-meta.xml
<CustomField>
    <fullName>ModuleProgress__c</fullName>
    <formula>Module__r.Points__c * 100 / UnitResponseQuantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Module Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>