ApexTrailhead/force-app/main/default/objects/ModuleResponse__c/fields/TotalPoints__c.field-meta.xml
<CustomField>
    <fullName>TotalPoints__c</fullName>
    <label>Total Points</label>
    <summarizedField>UnitResponse__c.Points__c</summarizedField>
    <summaryForeignKey>UnitResponse__c.ModuleResponse__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>