ApexTrailhead/force-app/main/default/objects/ModuleResponse__c/fields/UnitResponseQuantity__c.field-meta.xml
<CustomField>
    <fullName>UnitResponseQuantity__c</fullName>
    <label>Unit Response Quantity</label>
    <summaryForeignKey>UnitResponse__c.ModuleResponse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>